--- a/websocket.html
+++ b/websocket.html
@@ -12,7 +12,7 @@
     const status = document.getElementById("status");
     const locationDisplay = document.getElementById("location");
 
-    const socket = new WebSocket("wss://... "); // ⬅️ remplace par l’IP locale de ton PC
+    const socket = new WebSocket("wss://f2dd-80-214-112-246.ngrok-free.app  "); // ⬅️ remplace par l’IP locale de ton PC
 
     socket.onopen = () => {
       status.textContent = "Connecté au WebSocket";
