--- a/websocket.html
+++ b/websocket.html
@@ -12,7 +12,7 @@
     const status = document.getElementById("status");
     const locationDisplay = document.getElementById("location");
 
-    const socket = new WebSocket("wss://"); // ⬅️ remplace par l’IP locale de ton PC
+    const socket = new WebSocket("wss://fe44-193-205-81-5.ngrok-free.ap"); // ⬅️ remplace par l’IP locale de ton PC
 
     socket.onopen = () => {
       status.textContent = "Connecté au WebSocket";
